--- a/deployment.yaml
+++ b/deployment.yaml
@@ -28,6 +28,6 @@ spec:
     spec:
       containers:
       - name: uber-ui
-        image: 912101370089.dkr.ecr.us-east-1.amazonaws.com/devopsthehardway-ecr-repo:latest
+        image: gcr.io/gcp-test-366209/python:68:latest
         ports:
         - containerPort: 5000
